grammar/ezbpf_parser.go
// Code generated from ezbpf.g4 by ANTLR 4.13.2. DO NOT EDIT.

package grammar // ezbpf
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type ezbpfParser struct {
	*antlr.BaseParser
}

var EzbpfParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func ezbpfParserInit() {
	staticData := &EzbpfParserStaticData
	staticData.LiteralNames = []string{
		"", "'+'", "'-'", "'*'", "'/'", "'%'", "'&'", "'|'", "'^'", "'<<'",
		"'>>'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'&&'", "'||'",
		"'!'", "'='", "'+='", "'-='", "'*='", "'/='", "'%='", "'('", "')'",
		"'{'", "'}'", "'['", "']'", "','", "';'", "':'", "'.'", "", "", "",
		"", "", "", "'__u32'", "'__u64'", "'__s32'", "'__s64'", "'u32'", "'u64'",
		"'s32'", "'s64'", "'__be32'", "'__be64'", "'var'", "'const'", "'char'",
		"'int'", "'long'", "'short'", "'uint'", "'void'", "'struct'", "'ethhdr'",
		"'iphdr'", "'tcphdr'", "'udphdr'", "'fn'", "'return'", "'if'", "'elif'",
		"'else'", "'map'", "'BPF_MAP_TYPE_HASH'", "'BPF_MAP_TYPE_ARRAY'", "'BPF_MAP_TYPE_PERCPU_HASH'",
		"'BPF_MAP_TYPE_PERCPU_ARRAY'", "'BPF_MAP_TYPE_LRU_HASH'", "'BPF_MAP_TYPE_LRU_PERCPU_HASH'",
	}
	staticData.SymbolicNames = []string{
		"", "ADD", "SUB", "MUL", "DIV", "MOD", "BIT_AND", "BIT_OR", "BIT_XOR",
		"LSHIFT", "RSHIFT", "EQ", "NEQ", "LT", "GT", "LTE", "GTE", "AND", "OR",
		"NOT", "ASSIGN", "ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN",
		"MOD_ASSIGN", "LPAR", "RPAR", "LBRA", "RBRA", "LSQ", "RSQ", "COMMA",
		"SEMI", "COLON", "DOT", "HEX_LITERAL", "OCT_LITERAL", "BIN_LITERAL",
		"DEC_LITERAL", "CHAR_LITERAL", "STRING_LITERAL", "UPTR32", "UPTR64",
		"SPTR32", "SPTR64", "U32", "U64", "S32", "S64", "BEPTR32", "BEPTR64",
		"VAR", "CONST", "CHAR", "INT", "LONG", "SHORT", "UINT", "VOID", "STRUCT",
		"ETHHDR", "IPHDR", "TCPHDR", "UDPHDR", "FN", "RETURN", "IF", "ELSEIF",
		"ELSE", "MAP", "BPF_MAP_TYPE_HASH", "BPF_MAP_TYPE_ARRAY", "BPF_MAP_TYPE_PERCPU_HASH",
		"BPF_MAP_TYPE_PERCPU_ARRAY", "BPF_MAP_TYPE_LRU_HASH", "BPF_MAP_TYPE_LRU_PERCPU_HASH",
		"IDENTIFIER", "WS", "COMMENT", "MULTI_COMMENT",
	}
	staticData.RuleNames = []string{
		"type", "assign", "compare", "expression", "funcCallExpression", "structInitExpression",
		"structFieldAssign", "arg", "args", "param", "params", "varInitStmt",
		"varDeclStmt", "constDeclStmt", "mapType", "mapDeclStmt", "structDataMemStmt",
		"structDeclStmt", "ifStmt", "returnStmt", "funcDeclStmt", "stmt", "stmts",
		"prog",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// ezbpfParserInit initializes any static state used to implement ezbpfParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewezbpfParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func EzbpfParserInit() {
	staticData := &EzbpfParserStaticData
	staticData.once.Do(ezbpfParserInit)
}

// NewezbpfParser produces a new parser instance for the optional input antlr.TokenStream.
func NewezbpfParser(input antlr.TokenStream) *ezbpfParser {
	EzbpfParserInit()
	this := new(ezbpfParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &EzbpfParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "ezbpf.g4"

	return this
}

// ezbpfParser tokens.
const (
	ezbpfParserEOF                          = antlr.TokenEOF
	ezbpfParserADD                          = 1
	ezbpfParserSUB                          = 2
	ezbpfParserMUL                          = 3
	ezbpfParserDIV                          = 4
	ezbpfParserMOD                          = 5
	ezbpfParserBIT_AND                      = 6
	ezbpfParserBIT_OR                       = 7
	ezbpfParserBIT_XOR                      = 8
	ezbpfParserLSHIFT                       = 9
	ezbpfParserRSHIFT                       = 10
	ezbpfParserEQ                           = 11
	ezbpfParserNEQ                          = 12
	ezbpfParserLT                           = 13
	ezbpfParserGT                           = 14
	ezbpfParserLTE                          = 15
	ezbpfParserGTE                          = 16
	ezbpfParserAND                          = 17
	ezbpfParserOR                           = 18
	ezbpfParserNOT                          = 19
	ezbpfParserASSIGN                       = 20
	ezbpfParserADD_ASSIGN                   = 21
	ezbpfParserSUB_ASSIGN                   = 22
	ezbpfParserMUL_ASSIGN                   = 23
	ezbpfParserDIV_ASSIGN                   = 24
	ezbpfParserMOD_ASSIGN                   = 25
	ezbpfParserLPAR                         = 26
	ezbpfParserRPAR                         = 27
	ezbpfParserLBRA                         = 28
	ezbpfParserRBRA                         = 29
	ezbpfParserLSQ                          = 30
	ezbpfParserRSQ                          = 31
	ezbpfParserCOMMA                        = 32
	ezbpfParserSEMI                         = 33
	ezbpfParserCOLON                        = 34
	ezbpfParserDOT                          = 35
	ezbpfParserHEX_LITERAL                  = 36
	ezbpfParserOCT_LITERAL                  = 37
	ezbpfParserBIN_LITERAL                  = 38
	ezbpfParserDEC_LITERAL                  = 39
	ezbpfParserCHAR_LITERAL                 = 40
	ezbpfParserSTRING_LITERAL               = 41
	ezbpfParserUPTR32                       = 42
	ezbpfParserUPTR64                       = 43
	ezbpfParserSPTR32                       = 44
	ezbpfParserSPTR64                       = 45
	ezbpfParserU32                          = 46
	ezbpfParserU64                          = 47
	ezbpfParserS32                          = 48
	ezbpfParserS64                          = 49
	ezbpfParserBEPTR32                      = 50
	ezbpfParserBEPTR64                      = 51
	ezbpfParserVAR                          = 52
	ezbpfParserCONST                        = 53
	ezbpfParserCHAR                         = 54
	ezbpfParserINT                          = 55
	ezbpfParserLONG                         = 56
	ezbpfParserSHORT                        = 57
	ezbpfParserUINT                         = 58
	ezbpfParserVOID                         = 59
	ezbpfParserSTRUCT                       = 60
	ezbpfParserETHHDR                       = 61
	ezbpfParserIPHDR                        = 62
	ezbpfParserTCPHDR                       = 63
	ezbpfParserUDPHDR                       = 64
	ezbpfParserFN                           = 65
	ezbpfParserRETURN                       = 66
	ezbpfParserIF                           = 67
	ezbpfParserELSEIF                       = 68
	ezbpfParserELSE                         = 69
	ezbpfParserMAP                          = 70
	ezbpfParserBPF_MAP_TYPE_HASH            = 71
	ezbpfParserBPF_MAP_TYPE_ARRAY           = 72
	ezbpfParserBPF_MAP_TYPE_PERCPU_HASH     = 73
	ezbpfParserBPF_MAP_TYPE_PERCPU_ARRAY    = 74
	ezbpfParserBPF_MAP_TYPE_LRU_HASH        = 75
	ezbpfParserBPF_MAP_TYPE_LRU_PERCPU_HASH = 76
	ezbpfParserIDENTIFIER                   = 77
	ezbpfParserWS                           = 78
	ezbpfParserCOMMENT                      = 79
	ezbpfParserMULTI_COMMENT                = 80
)

// ezbpfParser rules.
const (
	ezbpfParserRULE_type                 = 0
	ezbpfParserRULE_assign               = 1
	ezbpfParserRULE_compare              = 2
	ezbpfParserRULE_expression           = 3
	ezbpfParserRULE_funcCallExpression   = 4
	ezbpfParserRULE_structInitExpression = 5
	ezbpfParserRULE_structFieldAssign    = 6
	ezbpfParserRULE_arg                  = 7
	ezbpfParserRULE_args                 = 8
	ezbpfParserRULE_param                = 9
	ezbpfParserRULE_params               = 10
	ezbpfParserRULE_varInitStmt          = 11
	ezbpfParserRULE_varDeclStmt          = 12
	ezbpfParserRULE_constDeclStmt        = 13
	ezbpfParserRULE_mapType              = 14
	ezbpfParserRULE_mapDeclStmt          = 15
	ezbpfParserRULE_structDataMemStmt    = 16
	ezbpfParserRULE_structDeclStmt       = 17
	ezbpfParserRULE_ifStmt               = 18
	ezbpfParserRULE_returnStmt           = 19
	ezbpfParserRULE_funcDeclStmt         = 20
	ezbpfParserRULE_stmt                 = 21
	ezbpfParserRULE_stmts                = 22
	ezbpfParserRULE_prog                 = 23
)

// ITypeContext is an interface to support dynamic dispatch.
type ITypeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	U32() antlr.TerminalNode
	U64() antlr.TerminalNode
	UPTR32() antlr.TerminalNode
	UPTR64() antlr.TerminalNode
	BEPTR32() antlr.TerminalNode
	BEPTR64() antlr.TerminalNode
	S32() antlr.TerminalNode
	S64() antlr.TerminalNode
	SPTR32() antlr.TerminalNode
	SPTR64() antlr.TerminalNode
	CHAR() antlr.TerminalNode
	SHORT() antlr.TerminalNode
	LONG() antlr.TerminalNode
	UINT() antlr.TerminalNode
	INT() antlr.TerminalNode
	VOID() antlr.TerminalNode
	IDENTIFIER() antlr.TerminalNode

	// IsTypeContext differentiates from other interfaces.
	IsTypeContext()
}

type TypeContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTypeContext() *TypeContext {
	var p = new(TypeContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ezbpfParserRULE_type
	return p
}

func InitEmptyTypeContext(p *TypeContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ezbpfParserRULE_type
}

func (*TypeContext) IsTypeContext() {}

func NewTypeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TypeContext {
	var p = new(TypeContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ezbpfParserRULE_type

	return p
}

func (s *TypeContext) GetParser() antlr.Parser { return s.parser }

func (s *TypeContext) U32() antlr.TerminalNode {
	return s.GetToken(ezbpfParserU32, 0)
}

func (s *TypeContext) U64() antlr.TerminalNode {
	return s.GetToken(ezbpfParserU64, 0)
}

func (s *TypeContext) UPTR32() antlr.TerminalNode {
	return s.GetToken(ezbpfParserUPTR32, 0)
}

func (s *TypeContext) UPTR64() antlr.TerminalNode {
	return s.GetToken(ezbpfParserUPTR64, 0)
}

func (s *TypeContext) BEPTR32() antlr.TerminalNode {
	return s.GetToken(ezbpfParserBEPTR32, 0)
}

func (s *TypeContext) BEPTR64() antlr.TerminalNode {
	return s.GetToken(ezbpfParserBEPTR64, 0)
}

func (s *TypeContext) S32() antlr.TerminalNode {
	return s.GetToken(ezbpfParserS32, 0)
}

func (s *TypeContext) S64() antlr.TerminalNode {
	return s.GetToken(ezbpfParserS64, 0)
}

func (s *TypeContext) SPTR32() antlr.TerminalNode {
	return s.GetToken(ezbpfParserSPTR32, 0)
}

func (s *TypeContext) SPTR64() antlr.TerminalNode {
	return s.GetToken(ezbpfParserSPTR64, 0)
}

func (s *TypeContext) CHAR() antlr.TerminalNode {
	return s.GetToken(ezbpfParserCHAR, 0)
}

func (s *TypeContext) SHORT() antlr.TerminalNode {
	return s.GetToken(ezbpfParserSHORT, 0)
}

func (s *TypeContext) LONG() antlr.TerminalNode {
	return s.GetToken(ezbpfParserLONG, 0)
}

func (s *TypeContext) UINT() antlr.TerminalNode {
	return s.GetToken(ezbpfParserUINT, 0)
}

func (s *TypeContext) INT() antlr.TerminalNode {
	return s.GetToken(ezbpfParserINT, 0)
}

func (s *TypeContext) VOID() antlr.TerminalNode {
	return s.GetToken(ezbpfParserVOID, 0)
}

func (s *TypeContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(ezbpfParserIDENTIFIER, 0)
}

func (s *TypeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TypeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TypeContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ezbpfVisitor:
		return t.VisitType(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *ezbpfParser) Type_() (localctx ITypeContext) {
	localctx = NewTypeContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, ezbpfParserRULE_type)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(48)
		_la = p.GetTokenStream().LA(1)

		if !((int64((_la-42)) & ^0x3f) == 0 && ((int64(1)<<(_la-42))&34359997439) != 0) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IAssignContext is an interface to support dynamic dispatch.
type IAssignContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	ASSIGN() antlr.TerminalNode
	ADD_ASSIGN() antlr.TerminalNode
	SUB_ASSIGN() antlr.TerminalNode
	MUL_ASSIGN() antlr.TerminalNode
	DIV_ASSIGN() antlr.TerminalNode
	MOD_ASSIGN() antlr.TerminalNode

	// IsAssignContext differentiates from other interfaces.
	IsAssignContext()
}

type AssignContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAssignContext() *AssignContext {
	var p = new(AssignContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ezbpfParserRULE_assign
	return p
}

func InitEmptyAssignContext(p *AssignContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ezbpfParserRULE_assign
}

func (*AssignContext) IsAssignContext() {}

func NewAssignContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *AssignContext {
	var p = new(AssignContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ezbpfParserRULE_assign

	return p
}

func (s *AssignContext) GetParser() antlr.Parser { return s.parser }

func (s *AssignContext) ASSIGN() antlr.TerminalNode {
	return s.GetToken(ezbpfParserASSIGN, 0)
}

func (s *AssignContext) ADD_ASSIGN() antlr.TerminalNode {
	return s.GetToken(ezbpfParserADD_ASSIGN, 0)
}

func (s *AssignContext) SUB_ASSIGN() antlr.TerminalNode {
	return s.GetToken(ezbpfParserSUB_ASSIGN, 0)
}

func (s *AssignContext) MUL_ASSIGN() antlr.TerminalNode {
	return s.GetToken(ezbpfParserMUL_ASSIGN, 0)
}

func (s *AssignContext) DIV_ASSIGN() antlr.TerminalNode {
	return s.GetToken(ezbpfParserDIV_ASSIGN, 0)
}

func (s *AssignContext) MOD_ASSIGN() antlr.TerminalNode {
	return s.GetToken(ezbpfParserMOD_ASSIGN, 0)
}

func (s *AssignContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *AssignContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *AssignContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ezbpfVisitor:
		return t.VisitAssign(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *ezbpfParser) Assign() (localctx IAssignContext) {
	localctx = NewAssignContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, ezbpfParserRULE_assign)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(50)
		_la = p.GetTokenStream().LA(1)

		if !((int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&66060288) != 0) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ICompareContext is an interface to support dynamic dispatch.
type ICompareContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EQ() antlr.TerminalNode
	NEQ() antlr.TerminalNode
	GT() antlr.TerminalNode
	LT() antlr.TerminalNode
	GTE() antlr.TerminalNode
	LTE() antlr.TerminalNode
	AND() antlr.TerminalNode
	OR() antlr.TerminalNode
	NOT() antlr.TerminalNode

	// IsCompareContext differentiates from other interfaces.
	IsCompareContext()
}

type CompareContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCompareContext() *CompareContext {
	var p = new(CompareContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ezbpfParserRULE_compare
	return p
}

func InitEmptyCompareContext(p *CompareContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ezbpfParserRULE_compare
}

func (*CompareContext) IsCompareContext() {}

func NewCompareContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CompareContext {
	var p = new(CompareContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ezbpfParserRULE_compare

	return p
}

func (s *CompareContext) GetParser() antlr.Parser { return s.parser }

func (s *CompareContext) EQ() antlr.TerminalNode {
	return s.GetToken(ezbpfParserEQ, 0)
}

func (s *CompareContext) NEQ() antlr.TerminalNode {
	return s.GetToken(ezbpfParserNEQ, 0)
}

func (s *CompareContext) GT() antlr.TerminalNode {
	return s.GetToken(ezbpfParserGT, 0)
}

func (s *CompareContext) LT() antlr.TerminalNode {
	return s.GetToken(ezbpfParserLT, 0)
}

func (s *CompareContext) GTE() antlr.TerminalNode {
	return s.GetToken(ezbpfParserGTE, 0)
}

func (s *CompareContext) LTE() antlr.TerminalNode {
	return s.GetToken(ezbpfParserLTE, 0)
}

func (s *CompareContext) AND() antlr.TerminalNode {
	return s.GetToken(ezbpfParserAND, 0)
}

func (s *CompareContext) OR() antlr.TerminalNode {
	return s.GetToken(ezbpfParserOR, 0)
}

func (s *CompareContext) NOT() antlr.TerminalNode {
	return s.GetToken(ezbpfParserNOT, 0)
}

func (s *CompareContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CompareContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CompareContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ezbpfVisitor:
		return t.VisitCompare(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *ezbpfParser) Compare() (localctx ICompareContext) {
	localctx = NewCompareContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, ezbpfParserRULE_compare)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(52)
		_la = p.GetTokenStream().LA(1)

		if !((int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&1046528) != 0) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IExpressionContext is an interface to support dynamic dispatch.
type IExpressionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser
	// IsExpressionContext differentiates from other interfaces.
	IsExpressionContext()
}

type ExpressionContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyExpressionContext() *ExpressionContext {
	var p = new(ExpressionContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ezbpfParserRULE_expression
	return p
}

func InitEmptyExpressionContext(p *ExpressionContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ezbpfParserRULE_expression
}

func (*ExpressionContext) IsExpressionContext() {}

func NewExpressionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ExpressionContext {
	var p = new(ExpressionContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ezbpfParserRULE_expression

	return p
}

func (s *ExpressionContext) GetParser() antlr.Parser { return s.parser }

func (s *ExpressionContext) CopyAll(ctx *ExpressionContext) {
	s.CopyFrom(&ctx.BaseParserRuleContext)
}

func (s *ExpressionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExpressionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type DotExpressionContext struct {
	ExpressionContext
}

func NewDotExpressionContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *DotExpressionContext {
	var p = new(DotExpressionContext)

	InitEmptyExpressionContext(&p.ExpressionContext)
	p.parser = parser
	p.CopyAll(ctx.(*ExpressionContext))

	return p
}

func (s *DotExpressionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DotExpressionContext) Expression() IExpressionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExpressionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *DotExpressionContext) DOT() antlr.TerminalNode {
	return s.GetToken(ezbpfParserDOT, 0)
}

func (s *DotExpressionContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(ezbpfParserIDENTIFIER, 0)
}

func (s *DotExpressionContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ezbpfVisitor:
		return t.VisitDotExpression(s)

	default:
		return t.VisitChildren(s)
	}
}

type BinLiteralExpressionContext struct {
	ExpressionContext
}

func NewBinLiteralExpressionContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *BinLiteralExpressionContext {
	var p = new(BinLiteralExpressionContext)

	InitEmptyExpressionContext(&p.ExpressionContext)
	p.parser = parser
	p.CopyAll(ctx.(*ExpressionContext))

	return p
}

func (s *BinLiteralExpressionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BinLiteralExpressionContext) BIN_LITERAL() antlr.TerminalNode {
	return s.GetToken(ezbpfParserBIN_LITERAL, 0)
}

func (s *BinLiteralExpressionContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ezbpfVisitor:
		return t.VisitBinLiteralExpression(s)

	default:
		return t.VisitChildren(s)
	}
}
